# apple-music-wrapper

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bridge.cpp  launch.c  layout.h  logger.c  logger.h  parser.c  parser.h  server.c  symbol.h  wrapper
scripts/: build_tzdata.py  patch_elf.py
